[project]
name = "testbenchmanager"
version = "0.1.0"
description = ""
authors = [
    {name = "Eric",email = "eric@souder.ca"}
]
readme = "README.md"
requires-python = "^3.12"
dependencies = [
    "fastapi (>=0.118.0,<0.119.0)",
    "pydantic (>=2.11.9,<3.0.0)",
    "epcomms @ git+http://github.com:Electric-Propulsion/EPComms.git@v1.3.1",
    "uvicorn (>=0.38.0,<0.39.0)",
    "pyyaml (>=6.0.3,<7.0.0)",
]

[dependency-groups]
dev = [
    "isort (>=6.0.1,<7.0.0)",
    "black (>=25.9.0,<26.0.0)",
    "pylint (>=3.3.8,<4.0.0)",
    "pre-commit (>=4.3.0,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = [{ include = "testbenchmanager", from = "src" }]

[tool.isort]
profile = "black"

[tool.pylint.imports]
allow-reexport-from-package = true

[tool.pyright]
reportMissingTypeStubs = "none"
typeCheckingMode = "strict"